# sterne

./: .gitignore  README.md  load.py  others.py  plot.py  priors.py  pyproject.toml  reflex_motion.py  run_simulate.py  simulate.py  simulate.py.bk  simulate_samples.py  simulate_samples.py.bk  sterne_main.py
model/: .plotpmpar.tmp  calculate.py  kopeikin_effects.py  pmpar_e  pmpar_t  positions.py  reflex_motion.py  test.pmpar.in  test.pmpar.out
plot/: cornerplot.py  sky_position_evolution.py
src/STERNE.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sterne/: others.py  priors.py  run_simulate.py  simulate.py
src/sterne/examples/: J2145-0750.par  J2145-0750_forecast.pmpar.in  J2145-0750_info.txt  README.J2145
src/sterne/forecast/: forecast_pulsar.py
src/sterne/model/: kopeikin_effects.py  positions.py  reflex_motion.py
src/sterne/plot/: .sky_position_evolution.py.swp  cornerplot.py  sky_position_evolution.py
test/: expected_inc__om_asc__relation.py  kopeikin_only_inference.py
