[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy", "astropy", "bilby", "psrqpy", "novas", "matplotlib", "corner"]
build-backend = "setuptools.build_meta"

[project]
name = "sterne"
version = "1.0.2"
authors = [
  { name="Hao Ding", email="hdingastro@hotmail.com" },
  { name="Adam Deller", email='adeller@astro.swin.edu.au'}
]
description = "STERNE (stars in German) -- aStromeTry bayEsian infeReNcE"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dingswin/sterne"
"Bug Tracker" = "https://github.com/dingswin/sterne/issues"
